# strava-mcp-server

./: .gitignore  Install Strava MCP.command  LICENSE  README.md  build_dmg.sh  install.bat  install.sh  pyproject.toml  requirements.txt  server.json  server.py  strava_auth.py
.github/workflows/: tests.yml
tests/: test_training_load.py
